# Speedy

./: .replit  LICENSE  README.md  automate.py  bot.py  const.py  keep_alive.py  pyproject.toml  requirements.txt
db/: character.json  items-boost.json  items-projectile.json  items-trap.json
exts/: about.py  banner.py  challenger.py  character.py  common.py  eval.py  level.py  ping.py  rare.py  runnerreport.py  special.py  stats.py  super_rare.py  wallpaper.py
utils/: colorthief.py
