[tool.poetry]
name = "SFSB-Bot"
version = "4.15.0"
description = "A Discord bot written in interactions.py focusing on the mobile game Sonic Forces: Speed Battle"
license = "MIT"
authors = ["Jimmy-Blue <jimmyblue00@duck.com>"]
readme = "README.md"
repository = "https://github.com/Jimmy-Blue/Speedy"

[tool.poetry.dependencies]
python = "3.10.10"
python-dotenv = "0.19.2"
interactions = { git = "https://github.com/Jimmy-Blue/interactions.py.git", branch = "5.x"}
pillow = "9.4.0"
Flask = "^2.2.2"


[tool.poetry.dev-dependencies]
black = "22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
